contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/storage/fail/tuple_variant_rejected.stderr
error: custom attribute panicked
 --> tests/ui/storage/fail/tuple_variant_rejected.rs:7:1
  |
7 | #[common_macros::storage]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: only unit variants or named fields are supported in storage enums
